Refresh examples - Added index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,196 @@
-<html>
-    <body>gh-pages setup</body>
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
+
+        <title>Parallel JavaScript Examples</title>
+
+        <!-- Bootstrap core CSS -->
+        <link href="css/bootstrap.css" rel="stylesheet">
+
+        <!-- Custom CSS for the '3 Col Portfolio' Template -->
+        <link href="css/3-col-portfolio.css" rel="stylesheet">
+    </head>
+
+    <body>
+
+        <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand"
+                    href="https://github.com/IntelLabs/ParallelJavaScript">Parallel JavaScript</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="about.html">About</a>
+                    </li>
+                    <li><a href="spec.html">Specification</a>
+                    </li>
+                    <li><a href="demos.html">Demos</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+        </nav>
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-lg-12" style="margin-top:50px;">
+                    <h2 class="page-header">Parallel JavaScript Examples</h2>
+                    <p> Click on the following examples to run them 
+                    in your browser.
+                    <p>If you are visiting this page with Firefox Nightly,
+                    these examples will run in parallel using the PJS
+                    extensions. Else they will use normal sequential
+                    JavaScript.</p>
+                </div>
+
+            </div>
+
+
+            <div class="row">
+
+                <div class="col-lg-12">
+                    <h1 class="page-header">
+                    </h1>
+                </div>
+
+            </div>
+
+
+
+            <div class="row">
+
+                <div class="col-md-4 portfolio-item">
+                    <a href="examples/TourDeBlock/tourdeblock/index.htm" target="_blank">
+                        <img class="img-thumbnail" src="img/tour-de-block.jpg">
+                    </a>
+                    <h3><a href="examples/TourDeBlock/tourdeblock/index.htm" target="_blank">Tour De block</a>
+                    </h3>
+                    <p>A game with physics accelerated by Parallel JavaScript</p>
+                </div>
+
+                <div class="col-md-4 portfolio-item">
+                    <a href="examples/ProceduralTerrain/index.html" target="_blank">
+                        <img class="img-thumbnail" src="img/procedural.jpg">
+                    </a>
+                    <h3><a href="examples/ProceduralTerrain/index.html" target="_blank">Procedural Terrain</a>
+                    </h3>
+                    <p>A port of Notch's "Minecraft terrain in JS", ported to
+                    Parallel JavaScript.</p>
+                </div>
+
+                <div class="col-md-4 portfolio-item">
+                    <a href="examples/Deform/index.html">
+                        <img class="img-thumbnail" src="img/deform.jpg">
+                    </a>
+                    <h3><a href="examples/Deform/index.html">Deform</a>
+                    </h3>
+                    <p>Deformation and reflections</p>
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-md-4 portfolio-item">
+                    <a href="examples/Video/complete/index.html">
+                        <img class="img-thumbnail" src="img/video.png">
+                    </a>
+                    <h3><a href="examples/Video/complete/index.html">Video Processing</a>
+                    </h3>
+                    <p>Apply filters in real-time to a video or webcam stream.</p>
+                </div>
+
+                <div class="col-md-4 portfolio-item">
+                    <a href="examples/Mandelbrot-explore/mandelbrot.html">
+                        <img class="img-thumbnail" src="img/mandelbrot1.jpg">
+                    </a>
+                    <h3><a href="examples/Mandelbrot-explore/mandelbrot.html">Mandelbrot Zoom</a>
+                    </h3>
+                    <p>Visualize the Mandelbrot set.</p>
+                </div>
+
+                <div class="col-md-4 portfolio-item">
+                    <a href="#project-link">
+                        <img class="img-thumbnail" src="img/convolution.png">
+                    </a>
+                    <h3><a href="#project-link">Convolution</a>
+                    </h3>
+                    <p>A method that is commonly used in image
+                    processing and computer vision.</p>
+                </div>
+
+            </div>
+            <div class="row">
+
+                <div class="col-md-4 portfolio-item">
+                    <a href="#project-link">
+                        <img class="img-thumbnail" src="http://placehold.it/700x400">
+                    </a>
+                    <h3><a href="#project-link">Example Name</a>
+                    </h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                </div>
+
+                <div class="col-md-4 portfolio-item">
+                    <a href="#project-link">
+                        <img class="img-thumbnail" src="http://placehold.it/700x400">
+                    </a>
+                    <h3><a href="#project-link">Example Name</a>
+                    </h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                </div>
+
+                <div class="col-md-4 portfolio-item">
+                    <a href="#project-link">
+                        <img class="img-thumbnail" src="http://placehold.it/700x400">
+                    </a>
+                    <h3><a href="#project-link">Example Name</a>
+                    </h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+        <div class="container">
+
+            <hr>
+
+            <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <!--<p>Copyright &copy; Company 2013</p>-->
+                </div>
+            </div>
+            </footer>
+
+        </div>
+        <!-- /.container -->
+
+        <!-- JavaScript -->
+        <script src="js/jquery-1.10.2.js"></script>
+        <script src="js/bootstrap.js"></script>
+
+    </body>
+
 </html>
