Renamed audio file

--- a/examples/TourDeBlock/tourdeblock/index.htm
+++ b/examples/TourDeBlock/tourdeblock/index.htm
@@ -1366,14 +1366,14 @@
                     <div id="home-instructions-bg" style="position:absolute;width:490px;left:-238px;height:200px;top:425px; z-index:9; background-color:#ffffff; opacity:.75;"></div>
             </div>
         </div>
-        <audio id="sound-effect-0" src="../_assets/audio/Wood 2x4 01.ogg" ></audio>
-        <audio id="sound-effect-1" src="../_assets/audio/Wood 2x4 01.ogg" ></audio>
-        <audio id="sound-effect-2" src="../_assets/audio/Wood 2x4 01.ogg" ></audio>
-        <audio id="sound-effect-3" src="../_assets/audio/Wood 2x4 01.ogg" ></audio>
-        <audio id="sound-effect-4" src="../_assets/audio/Wood 2x4 01.ogg" ></audio>
-        <audio id="sound-effect-5" src="../_assets/audio/Wood 2x4 01.ogg" ></audio>
-        <audio id="sound-effect-6" src="../_assets/audio/Wood 2x4 01.ogg" ></audio>
-        <audio id="sound-effect-7" src="../_assets/audio/Wood 2x4 01.ogg" ></audio>
+        <audio id="sound-effect-0" src="../_assets/audio/Wood2x401.ogg" ></audio>
+        <audio id="sound-effect-1" src="../_assets/audio/Wood2x401.ogg" ></audio>
+        <audio id="sound-effect-2" src="../_assets/audio/Wood2x401.ogg" ></audio>
+        <audio id="sound-effect-3" src="../_assets/audio/Wood2x401.ogg" ></audio>
+        <audio id="sound-effect-4" src="../_assets/audio/Wood2x401.ogg" ></audio>
+        <audio id="sound-effect-5" src="../_assets/audio/Wood2x401.ogg" ></audio>
+        <audio id="sound-effect-6" src="../_assets/audio/Wood2x401.ogg" ></audio>
+        <audio id="sound-effect-7" src="../_assets/audio/Wood2x401.ogg" ></audio>
         <audio id="sound-background" src="../_assets/audio/" preload="auto" loop="loop" ></audio>
 
         <div id="finger1" style="position:fixed;width:30px;height:30px;background-color:#f00;display:none"></div>
