Fix to JQuery filename

--- a/examples/TourDeBlock/tourdeblock/index.htm
+++ b/examples/TourDeBlock/tourdeblock/index.htm
@@ -69,7 +69,7 @@
     
    <!-- other libraries -->
     <script type="application/javascript" src="lib/three/build/Three.js"></script>
-    <script type="text/javascript" src="lib/jQuery.js"></script>
+    <script type="text/javascript" src="lib/jquery.js"></script>
     <script type="text/javascript" src="lib/RequestAnimationFrame.js"></script>
     <script type="text/javascript" src="lib/JSTweener.js"></script>
 
