Added background audio

--- a/examples/TourDeBlock/tourdeblock/index.htm
+++ b/examples/TourDeBlock/tourdeblock/index.htm
@@ -1374,8 +1374,8 @@
         <audio id="sound-effect-5" src="../_assets/audio/Wood2x401.ogg" ></audio>
         <audio id="sound-effect-6" src="../_assets/audio/Wood2x401.ogg" ></audio>
         <audio id="sound-effect-7" src="../_assets/audio/Wood2x401.ogg" ></audio>
-        <!--<audio id="sound-background" src="../_assets/audio/" preload="auto"
-        loop="loop" ></audio>-->
+        <audio id="sound-background" src="../_assets/audio/" preload="auto"
+        loop="loop" ></audio>
 
         <div id="finger1" style="position:fixed;width:30px;height:30px;background-color:#f00;display:none"></div>
         <div id="finger2" style="position:fixed;width:30px;height:30px;background-color:Green;display:none"></div>
