Open examples in new window

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                 </div>
 
                 <div class="col-md-4 portfolio-item">
-                    <a href="examples/Deform/index.html">
+                    <a href="examples/Deform/index.html" target="_blank">
                         <img class="img-thumbnail" src="img/deform.jpg">
                     </a>
-                    <h3><a href="examples/Deform/index.html">Deform</a>
+                    <h3><a href="examples/Deform/index.html" target="_blank">Deform</a>
                     </h3>
                     <p>Deformation and reflections</p>
                 </div>
@@ -110,19 +110,19 @@
             <div class="row">
 
                 <div class="col-md-4 portfolio-item">
-                    <a href="examples/Video/complete/index.html">
+                    <a href="examples/Video/complete/index.html" target="_blank">
                         <img class="img-thumbnail" src="img/video.png">
                     </a>
-                    <h3><a href="examples/Video/complete/index.html">Video Processing</a>
+                    <h3><a href="examples/Video/complete/index.html" target="_blank">Video Processing</a>
                     </h3>
                     <p>Apply filters in real-time to a video or webcam stream.</p>
                 </div>
 
                 <div class="col-md-4 portfolio-item">
-                    <a href="examples/Mandelbrot-explore/mandelbrot.html">
+                    <a href="examples/Mandelbrot-explore/mandelbrot.html" target="_blank">
                         <img class="img-thumbnail" src="img/mandelbrot1.jpg">
                     </a>
-                    <h3><a href="examples/Mandelbrot-explore/mandelbrot.html">Mandelbrot Zoom</a>
+                    <h3><a href="examples/Mandelbrot-explore/mandelbrot.html" target="_blank">Mandelbrot Zoom</a>
                     </h3>
                     <p>Visualize the Mandelbrot set.</p>
                 </div>
