--- a/examples/TourDeBlock/tourdeblock/index.htm
+++ b/examples/TourDeBlock/tourdeblock/index.htm
@@ -56,7 +56,7 @@
     <script type="text/javascript" src="game/Interface.js"></script>
     <script type="text/javascript" src="game/LevelManagement.js"></script>
     <script type="text/javascript" src="assets/config.js"></script>
-    <script type="text/javascript" src="assets/levelSchema.js"></script>
+    <script type="text/javascript" src="assets/levelschema.js"></script>
     
     
      <!-- physics cubes -->
